tests/machine/x/go/save_jsonl_stdout.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/save_jsonl_stdout.go:29:21: cannot use v{…} (value of struct type v) as map[string]any value in argument to _save
../../../tests/machine/x/go/save_jsonl_stdout.go:29:23: unknown field Format in struct literal of type v

1: //go:build ignore
