tests/machine/x/go/save_jsonl_stdout.go
//go:build ignore

// Generated by Mochi compiler v0.10.28 on 1970-01-01T00:00:00Z

package main

import (
	"encoding/json"
	"fmt"
)

type v = People

type People struct {
	Name string `json:"name"`
	Age  int    `json:"age"`
}

func main() {
	people := []People{People{
		Name: "Alice",
		Age:  30,
	}, People{
		Name: "Bob",
		Age:  25,
	}}
	func() {
		for _, r := range people {
			b, _ := json.Marshal(r)
			fmt.Println(string(b))
		}
	}()
}
